--- a/index.html
+++ b/index.html
@@ -8,8 +8,36 @@
     <meta name="keywords" content="bootstrap, introduction">
     <meta name="author" content="Churchill Kanakania">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 <body>
     
+    <button class="btn btn-primary">Strathmore Leos</button>
+    <button class="btn btn-warning">Menengai Oilers</button>
+    <button class="btn  btn-outline-danger">Impala Saraceans</button>
+
+   
+
+    <!--Alerts-->
+    <div class="alert alert-warning">
+        Sorry, an error occured
+    </div>
+    <div class="alert alert-info">
+        You have successfully logged in
+    </div>
+
+    <h2>
+        Notifications 
+        <span class="badge bg-dark">5</span>
+    </h2>
+
+
+    <div class="progress">
+        <div class="progress-bar" role="progressbar" aria-label="Basic example" aria-valuenow="0" aria-valuemin="20" aria-valuemax="100"></div>
+      </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
