--- a/index1.html
+++ b/index1.html
@@ -80,10 +80,14 @@
 
         </section>
 
-        <p class="credits">
-            Building the talent pipeline to power Africa's technology industry
+        <!-- call to action section starts -->
 
-        </p>
+        <section class="container-fluid bg-secondary text-center fs-1 py-5">
+            <p class="fw-semibold text-dark">Lorem ipsum dolor sit, amet consectetur adipisicing.</p>
+
+            <button class="btn btn-dark">Read More</button>
+        </section>
+        <!-- call to action section ends -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     </body>
 </html>
